--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/src/index.css" />
     <title>Owl Code</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="h-screen">
+    <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
